configuracion de un pojo a traves del properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.servlet.context-path=/app
 value.name=jamal
 value.apellido=dt
 value.random=${random.value}
+
+user.email=test@gmail.com
+user.password=1234
+user.age=30
