Uso de logs a traves del properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ value.random=${random.value}
 user.email=test@gmail.com
 user.password=1234
 user.age=30
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
