Registro de datos en h2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ user.age=30
 logging.level.root=debug
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
-
+spring.jpa.show-sql=true
 #Configuracion de bd
 #spring.datasource.url==jdbc:h2:mem:testdb
 #spring.datasource.driver-class-name=org.h2.Driver
